# beamer2qmd

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-app.yml
src/beamer2qmd/: convert_to_quarto.py
src/beamer2qmd/nodes/: __init__.py  block.py  centering.py  column.py  columns.py  image.py  lists.py  math.py  notes.py  slide.py  text.py
src/beamer2qmd/parse/: __init__.py  parse.py
src/beamer2qmd/util/: util.py
tests/: conftest.py  test_convert_to_quarto.py
tests/beamer2qmd/parse/: test_parse.py
