[project]
name = "beamer2qmd"
version = "0.1.0"
description = ""
authors = [
    {name = "Rob Puncel",email = "rpuncel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "beamer2qmd", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
