[project]
name = "beamer2qmd"
version = "0.1.0"
description = ""
authors = [
    {name = "Rob Puncel",email = "rpuncel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "texsoup (>=0.3.1,<0.4.0)"
]

[tool.poetry]
packages = [{include = "beamer2qmd", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
types-pyyaml = "^6.0.12.20250402"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
